Improved: Fixing defects reported by code analysis tools, package org.apache.ofbiz -bi.util, -birt and -birt.container. (OFBIZ-10102)
Thanks Julian Leichert for reporting and providing the patch.

git-svn-id: https://svn.apache.org/repos/asf/ofbiz/ofbiz-plugins/trunk@1818845 13f79535-47bb-0310-9956-ffa450edef68